<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="km_per_liter">KM por litro</string>
    <string name="your_total_spend_will_be">seu gasto total será de:</string>
    <string name="rs_0">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="validation_all_fields">Preencha todos os campos corretamente.</string>
</resources>